-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
6.0
-
None
-
f9f1043e8a7706cbf6011ff4a42922b976b7a7fd (qt/qtbase/dev)
agent:2020/09/08 15:37:00 build.go:302: ********* Start testing of tst_QQuickApplicationWindow ********* agent:2020/09/08 15:37:00 build.go:302: Config: Using QtTest library 6.0.0, Qt 6.0.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 11.0.0 (clang-1100.0.33.16) (Apple)) agent:2020/09/08 15:37:00 build.go:302: PASS : tst_QQuickApplicationWindow::initTestCase() agent:2020/09/08 15:37:00 build.go:302: QWARN : tst_QQuickApplicationWindow::qmlCreation() No MTLDevice agent:2020/09/08 15:37:00 build.go:302: PASS : tst_QQuickApplicationWindow::qmlCreation() agent:2020/09/08 15:37:01 build.go:302: PASS : tst_QQuickApplicationWindow::activeFocusOnTab1() agent:2020/09/08 15:37:01 build.go:302: PASS : tst_QQuickApplicationWindow::activeFocusOnTab2() agent:2020/09/08 15:37:01 build.go:302: PASS : tst_QQuickApplicationWindow::defaultFocus() agent:2020/09/08 15:37:02 build.go:302: PASS : tst_QQuickApplicationWindow::implicitFill() agent:2020/09/08 15:37:02 build.go:302: === Received signal at function time: 20ms, total time: 1670ms, dumping stack === agent:2020/09/08 15:37:03 build.go:302: (lldb) process attach --pid 1647 agent:2020/09/08 15:37:09 build.go:302: Process 1647 stopped agent:2020/09/08 15:37:09 build.go:302: * thread #1, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa7865e libsystem_kernel.dylib`__wait4_nocancel + 10 agent:2020/09/08 15:37:09 build.go:302: libsystem_kernel.dylib`__wait4_nocancel: agent:2020/09/08 15:37:09 build.go:302: -> 0x7fff6fa7865e <+10>: jae 0x7fff6fa78668 ; <+20> agent:2020/09/08 15:37:09 build.go:302: 0x7fff6fa78660 <+12>: movq %rax, %rdi agent:2020/09/08 15:37:09 build.go:302: 0x7fff6fa78663 <+15>: jmp 0x7fff6fa70457 ; cerror_nocancel agent:2020/09/08 15:37:09 build.go:302: 0x7fff6fa78668 <+20>: retq agent:2020/09/08 15:37:09 build.go:302: Target 0: (tst_qquickapplicationwindow) stopped. agent:2020/09/08 15:37:09 build.go:302: Executable module set to "/Users/qt/work/qt/qtquickcontrols2/tests/auto/qquickapplicationwindow/tst_qquickapplicationwindow". agent:2020/09/08 15:37:09 build.go:302: Architecture set to: x86_64-apple-macosx-. agent:2020/09/08 15:37:09 build.go:302: (lldb) bt all agent:2020/09/08 15:37:09 build.go:302: * thread #1, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP agent:2020/09/08 15:37:09 build.go:302: * frame #0: 0x00007fff6fa7865e libsystem_kernel.dylib`__wait4_nocancel + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6f9ffbce libsystem_c.dylib`system + 452 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x0000000105058fc3 QtTest`stackTrace() + 435 agent:2020/09/08 15:37:09 build.go:302: frame #3: 0x000000010507f1e9 QtTest`QTest::FatalSignalHandler::signal(int) + 201 agent:2020/09/08 15:37:09 build.go:302: frame #4: 0x00007fff6fb20b5d libsystem_platform.dylib`_sigtramp + 29 agent:2020/09/08 15:37:09 build.go:302: frame #5: 0x00000001052afbb6 QtCore`QMetaObject::inherits(QMetaObject const*) const + 22 agent:2020/09/08 15:37:09 build.go:302: frame #6: 0x0000000103ad6d6c tst_qquickapplicationwindow`tst_QQuickApplicationWindow::attachedProperties() + 3788 agent:2020/09/08 15:37:09 build.go:302: frame #7: 0x00000001052b3a78 QtCore`QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const + 1192 agent:2020/09/08 15:37:09 build.go:302: frame #8: 0x0000000105050ac6 QtTest`QTest::TestMethods::invokeTestOnData(int) const + 1094 agent:2020/09/08 15:37:09 build.go:302: frame #9: 0x0000000105051572 QtTest`QTest::TestMethods::invokeTest(int, char const*, QTest::WatchDog*) const + 898 agent:2020/09/08 15:37:09 build.go:302: frame #10: 0x0000000105052597 QtTest`QTest::TestMethods::invokeTests(QObject*) const + 1175 agent:2020/09/08 15:37:09 build.go:302: frame #11: 0x0000000105052d42 QtTest`QTest::qRun() + 786 agent:2020/09/08 15:37:09 build.go:302: frame #12: 0x0000000105052834 QtTest`QTest::qExec(QObject*, int, char**) + 20 agent:2020/09/08 15:37:09 build.go:302: frame #13: 0x0000000103ae38d9 tst_qquickapplicationwindow`main + 105 agent:2020/09/08 15:37:09 build.go:302: frame #14: 0x00007fff6f93b3d5 libdyld.dylib`start + 1 agent:2020/09/08 15:37:09 build.go:302: frame #15: 0x00007fff6f93b3d5 libdyld.dylib`start + 1 agent:2020/09/08 15:37:09 build.go:302: thread #2 agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa71bfe libsystem_kernel.dylib`__workq_kernreturn + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6fb286e6 libsystem_pthread.dylib`_pthread_wqthread + 634 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x00007fff6fb283fd libsystem_pthread.dylib`start_wqthread + 13 agent:2020/09/08 15:37:09 build.go:302: thread #3 agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa71bfe libsystem_kernel.dylib`__workq_kernreturn + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6fb286e6 libsystem_pthread.dylib`_pthread_wqthread + 634 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x00007fff6fb283fd libsystem_pthread.dylib`start_wqthread + 13 agent:2020/09/08 15:37:09 build.go:302: thread #4, name = 'QtTest Watchdog' agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa7386a libsystem_kernel.dylib`__psynch_cvwait + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6fb2c56e libsystem_pthread.dylib`_pthread_cond_wait + 722 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x00007fff6c953b31 libc++.1.dylib`std::__1::condition_variable::__do_timed_wait(std::__1::unique_lock<std::__1::mutex>&, std::__1::chrono::time_point<std::__1::chrono::system_clock, std::__1::chrono::duration<long long, std::__1::ratio<1l, 1000000000l> > >) + 93 agent:2020/09/08 15:37:09 build.go:302: frame #3: 0x0000000105058c05 QtTest`QTest::WatchDog::waitFor(std::__1::unique_lock<std::__1::mutex>&, QTest::WatchDog::Expectation) + 245 agent:2020/09/08 15:37:09 build.go:302: frame #4: 0x0000000105058d0b QtTest`QTest::WatchDog::run() + 107 agent:2020/09/08 15:37:09 build.go:302: frame #5: 0x00000001050cb49e QtCore`QThreadPrivate::start(void*) + 334 agent:2020/09/08 15:37:09 build.go:302: frame #6: 0x00007fff6fb292eb libsystem_pthread.dylib`_pthread_body + 126 agent:2020/09/08 15:37:09 build.go:302: frame #7: 0x00007fff6fb2c249 libsystem_pthread.dylib`_pthread_start + 66 agent:2020/09/08 15:37:09 build.go:302: frame #8: 0x00007fff6fb2840d libsystem_pthread.dylib`thread_start + 13 agent:2020/09/08 15:37:09 build.go:302: thread #5 agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa71bfe libsystem_kernel.dylib`__workq_kernreturn + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6fb286e6 libsystem_pthread.dylib`_pthread_wqthread + 634 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x00007fff6fb283fd libsystem_pthread.dylib`start_wqthread + 13 agent:2020/09/08 15:37:09 build.go:302: thread #6, name = 'com.apple.NSEventThread' agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa7022a libsystem_kernel.dylib`mach_msg_trap + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6fa7076c libsystem_kernel.dylib`mach_msg + 60 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x00007fff4340b3bd CoreFoundation`__CFRunLoopServiceMachPort + 327 agent:2020/09/08 15:37:09 build.go:302: frame #3: 0x00007fff4340a92a CoreFoundation`__CFRunLoopRun + 1619 agent:2020/09/08 15:37:09 build.go:302: frame #4: 0x00007fff4340a085 CoreFoundation`CFRunLoopRunSpecific + 459 agent:2020/09/08 15:37:09 build.go:302: frame #5: 0x00007fff40a8ad1a AppKit`_NSEventThread + 175 agent:2020/09/08 15:37:09 build.go:302: frame #6: 0x00007fff6fb292eb libsystem_pthread.dylib`_pthread_body + 126 agent:2020/09/08 15:37:09 build.go:302: frame #7: 0x00007fff6fb2c249 libsystem_pthread.dylib`_pthread_start + 66 agent:2020/09/08 15:37:09 build.go:302: frame #8: 0x00007fff6fb2840d libsystem_pthread.dylib`thread_start + 13 agent:2020/09/08 15:37:09 build.go:302: thread #7 agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa71bfe libsystem_kernel.dylib`__workq_kernreturn + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6fb286e6 libsystem_pthread.dylib`_pthread_wqthread + 634 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x00007fff6fb283fd libsystem_pthread.dylib`start_wqthread + 13 agent:2020/09/08 15:37:09 build.go:302: thread #8, name = 'CVDisplayLink' agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa7386a libsystem_kernel.dylib`__psynch_cvwait + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x00007fff6fb2c5a1 libsystem_pthread.dylib`_pthread_cond_wait + 773 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x00007fff45191a4b CoreVideo`CVDisplayLink::waitUntil(unsigned long long) + 229 agent:2020/09/08 15:37:09 build.go:302: frame #3: 0x00007fff45190ffa CoreVideo`CVDisplayLink::runIOThread() + 482 agent:2020/09/08 15:37:09 build.go:302: frame #4: 0x00007fff6fb292eb libsystem_pthread.dylib`_pthread_body + 126 agent:2020/09/08 15:37:09 build.go:302: frame #5: 0x00007fff6fb2c249 libsystem_pthread.dylib`_pthread_start + 66 agent:2020/09/08 15:37:09 build.go:302: frame #6: 0x00007fff6fb2840d libsystem_pthread.dylib`thread_start + 13 agent:2020/09/08 15:37:09 build.go:302: thread #9, name = 'QQmlThread' agent:2020/09/08 15:37:09 build.go:302: frame #0: 0x00007fff6fa7836e libsystem_kernel.dylib`poll + 10 agent:2020/09/08 15:37:09 build.go:302: frame #1: 0x0000000105317a30 QtCore`qt_safe_poll(pollfd*, unsigned int, timespec const*) + 480 agent:2020/09/08 15:37:09 build.go:302: frame #2: 0x000000010531905a QtCore`QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 938 agent:2020/09/08 15:37:09 build.go:302: frame #3: 0x00000001052a0c9e QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 382 agent:2020/09/08 15:37:09 build.go:302: frame #4: 0x00000001050ca4ef QtCore`QThread::exec() + 143 agent:2020/09/08 15:37:09 build.go:302: frame #5: 0x0000000104d47cf9 QtQml`QQmlThreadPrivate::run() + 57 agent:2020/09/08 15:37:09 build.go:302: frame #6: 0x00000001050cb49e QtCore`QThreadPrivate::start(void*) + 334 agent:2020/09/08 15:37:09 build.go:302: frame #7: 0x00007fff6fb292eb libsystem_pthread.dylib`_pthread_body + 126 agent:2020/09/08 15:37:09 build.go:302: frame #8: 0x00007fff6fb2c249 libsystem_pthread.dylib`_pthread_start + 66 agent:2020/09/08 15:37:09 build.go:302: frame #9: 0x00007fff6fb2840d libsystem_pthread.dylib`thread_start + 13 agent:2020/09/08 15:37:09 build.go:302: (lldb) quit agent:2020/09/08 15:37:09 build.go:302: === End of stack trace === agent:2020/09/08 15:37:09 build.go:302: QFATAL : tst_QQuickApplicationWindow::attachedProperties() Received signal 11 agent:2020/09/08 15:37:09 build.go:302: Function time: 18ms Total time: 1669ms agent:2020/09/08 15:37:09 build.go:302: FAIL! : tst_QQuickApplicationWindow::attachedProperties() Received a fatal error. agent:2020/09/08 15:37:09 build.go:302: Loc: [Unknown file(0)] agent:2020/09/08 15:37:09 build.go:302: Totals: 6 passed, 1 failed, 0 skipped, 0 blacklisted, 9277ms agent:2020/09/08 15:37:09 build.go:302: ********* Finished testing of tst_QQuickApplicationWindow ********* agent:2020/09/08 15:37:09 build.go:302: make: *** [check] Abort trap: 6 agent:2020/09/08 15:37:09 build.go:353: Process finished with error: exit status 2
https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/311981
- resulted from
-
QTBUG-86330 QQC2: Using ComboBox crashes
-
- Closed
-